# hatch-minimal

./: README.md  pyproject.toml  writeitai.Dockerfile
